    (mode "rU", configurable with the new optional argument "mode").

* docutils/nodes.py

  - Fix [ 2975987 ] repr(Text) failed with long string (Jeffrey C. Jacobs).

* docutils/utils.py

  - Fix [ 2923723 ] let decode_path() tolerate path == None

* docutils/writers/html4css1/__init__.py

  - Support SVG and SWF images (thanks to Stefan Rank).

* docutils/writers/latex2e/__init__.py

  - Use `transforms.writer_aux.Admonitions` to "normalize" special
    admonitions.
  - Use the ``\url`` command for URLs (breaks long URLs instead of
    writing into the margin).
  - Preserve runs of spaces in `inline literals`__.
  - Deprecate ``figure_footnotes`` setting.
  - Rename ``use_latex_footnotes`` setting to `docutils_footnotes`__.
  - New ``latex_preamble`` setting.
  - Use PDF standard fonts (Times/Helvetica/Courier) as default.
  - Fix hyperlink targets (labels) for images, figures, and tables.
  - Apply [ 2961988 ] Load babel after inputenc and fontenc.
  - Apply [ 2961991 ] Call hyperref with unicode option.

__ docs/ref/restructuredtext.html#inline-literals
__ docs/user/config.html#docutils-footnotes

* docutils/writers/manpage.py

  - Fix: supported attribute (thanks to peter2108).
  - Remove trailing blanks in code (keep in sync with mercurial version).
  - Titles level 1, that is ``.SH``, always uppercase.
  - Apply patch from mg: literal text should be bold in man-pages.

* docutils/nodes.py

  - Fix: encoding ``'ascii'`` must be lowercase to prevent problems for
    turkish locale.

* setup.py:

  - Python 3 support: copy test/ and tools/ to the build-dir
    and convert Python sources with 2to3.


Release 0.6 (2009-10-11)
========================

* General:

  - Docutils is now compatible with Python versions from 2.3 up to 2.6
    and convertible to 3.1 code.

    + Node.__nonzero__ returns True instead of 1.
    + use os.walk instead os.path.walk.
    + minimize "types" module where possible.